# aprendendogit

./: README.md  base.resource  pyproject.toml
resource/common/: commons.resource
resource/locators/: abastecimentoLocators.resource
resource/page/: abastecimentoPage.resource
resource/step_definitions/: given.resource  then.resource  when.resource
resource/utils/: openBrowser.resource
test/: Abastecimento.robot
